<resources>
    <string name="app_name">Soundbox_Du_An_MD31</string>
    <string name="splash_text">Highly committed to quality products &amp; excellent services</string>
    <string name="paypal_client_id">AXWJI8GqZPzlfX10Kwvt3IWyF-3k12Pq9kUXWKu5BXAS-oMhVgUeRxTI5Mm_nI6fPFX91IBhJdaUAtRT</string>
    <string name="name_app">Soundbox</string>
    <string name="menu_home">Home</string>
    <!--    <string name="menu_all_songs">All Songs</string>-->
    <string name="menu_featured_songs">Featured Songs</string>
    <string name="menu_popular_songs">Bài Hát Nổi Bật</string>
    <string name="menu_all_songs">Tất Cả Bài Hát</string>
    <string name="menu_new_songs">Bài Hát Mới</string>
    <string name="menu_copyrighted_songs">Bài Bài Hát Bản Quyền</string>
    <string name="menu_favorite">Bài Hát Yêu Thích</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_contact">Contact</string>
    <string name="thank_you_feedback">Cảm ơn bạn đã gửi phản hồi cho nhà phát triểu , chúng tôi sẽ phản hồi cho bạn nhanh nhất</string>
    <string name="label_facebook">Facebook</string>
    <string name="label_call">Call Phone</string>
    <string name="label_gmail">Gmail</string>
    <string name="label_skype">Skype</string>
    <string name="label_youtube">Youtube</string>
    <string name="label_zalo">Zalo</string>

    <string name="feedback_name">Full name (*)</string>
    <string name="feedback_email">Email</string>
    <string name="feedback_phone">Phone number</string>
    <string name="feedback_comment">Comment (*)</string>
    <string name="send_feedback">Gửi Góp Ý</string>

    <string name="play_all">Play all</string>
    <string name="view_all">Tất cả</string>
    <string name="music_player">Music Player</string>
    <string name="views">Views</string>
    <string name="label_start_time">00:00</string>

    // action
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    // Validate
    <string name="name_require">Please enter your name</string>
    <string name="comment_require">Please enter your comment</string>

    // Hint
    <string name="hint_search_name">Bạn muốn nghe gì?</string>

    // Label
    <string name="label_artist">Ca sĩ:</string>

    // Message
    <string name="msg_please_waiting">Please wait…</string>
    <string name="msg_send_feedback_success">Send feedback successfully!</string>
    <string name="msg_exit_app">Bạn chắc chắn muốn thoát ?</string>
    <string name="msg_get_date_error">General error, please try again later</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>