<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragment.AppFeedbackFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/ic_back_ios_24_black" />

        <TextView
            android:id="@+id/tv_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Feedback App"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:padding="@dimen/define_dimen_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_name"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_2"
            android:background="@drawable/comment_border"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_phone"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/comment_border"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_email"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/comment_border"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:text="@string/feedback_comment"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/edt_comment"
            android:layout_width="match_parent"
            android:layout_height="@dimen/define_dimen_80"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:background="@drawable/bg_white_shape_border_color_main"
            android:gravity="start"
            android:imeOptions="actionDone"
            android:maxLength="1000"
            android:inputType="textMultiLine"
            android:padding="@dimen/define_dimen_12"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill,LabelFor" />

        <TextView
            android:id="@+id/tv_send_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_16"
            android:background="@color/black"
            android:gravity="center"
            android:padding="@dimen/define_dimen_12"
            android:text="@string/send_feedback"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_normal" />
    </LinearLayout>

</LinearLayout>