<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/layout_content_all"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >
    <RelativeLayout
        android:id="@+id/layout_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/define_dimen_10"
        android:layout_marginTop="@dimen/define_dimen_20"
        android:layout_marginEnd="@dimen/define_dimen_10"
        android:background="@color/white">

        <EditText
            android:id="@+id/edt_search_name_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_white_shape_border_red_corner_8"
            android:hint="@string/hint_search_name"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:padding="@dimen/define_dimen_12"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_xsmall"
            tools:ignore="Autofill" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/define_dimen_35"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/img_search_all"
            android:background="@color/colorPrimaryDark"
            tools:ignore="UnknownIdInLayout" />

        <ImageView
            android:id="@+id/img_search_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_5"
            android:src="@drawable/ic_search_red"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/layout_search"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/menu_all_songs"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_normal"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/layout_play_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="170dp"
            android:background="@drawable/bg_main_shape_corner_6_border_white"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/define_dimen_5"

           >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_play_all_white"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_all"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_xsmall" />
        </LinearLayout>
    </LinearLayout>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcv_data"
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/define_dimen_10"
            android:layout_marginTop="10dp"
            android:paddingBottom="80dp"/>
</RelativeLayout>